force-app/main/default/objects/Tenant_Config__mdt/Tenant_Config__mdt.object-meta.xml
<CustomObject>
    <label>Tenant Config</label>
    <pluralLabel>Tenant Configs</pluralLabel>
</CustomObject>