force-app/main/default/objects/Tenant_Config__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>