force-app/main/default/objects/Tenant_Config__mdt/fields/Deal_Expiry_Days__c.field-meta.xml
<CustomField>
    <fullName>Deal_Expiry_Days__c</fullName>
    <description
  >Default number of days before deal protection expires.</description>
    <label>Deal Expiry Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>