force-app/main/default/objects/Tenant_Config__mdt/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <description>Product edition for this tenant.</description>
    <label>Edition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
                <default>true</default>
                <label>Core</label>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>