force-app/main/default/objects/Tenant_Config__mdt/fields/Enable_AI__c.field-meta.xml
<CustomField>
    <fullName>Enable_AI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether AI functionality is enabled.</description>
    <label>Enable AI</label>
    <type>Checkbox</type>
</CustomField>