force-app/main/default/objects/Tenant_Config__mdt/fields/Enable_Analytics__c.field-meta.xml
<CustomField>
    <fullName>Enable_Analytics__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates whether partner analytics functionality is enabled.</description>
    <label>Enable Analytics</label>
    <type>Checkbox</type>
</CustomField>