force-app/main/default/objects/Tenant_Config__mdt/fields/Enable_Content__c.field-meta.xml
<CustomField>
    <fullName>Enable_Content__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates whether Content Hub functionality is enabled.</description>
    <label>Enable Content</label>
    <type>Checkbox</type>
</CustomField>