force-app/main/default/objects/Tenant_Config__mdt/fields/Enable_Deals__c.field-meta.xml
<CustomField>
    <fullName>Enable_Deals__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates whether deal registration functionality is enabled.</description>
    <label>Enable Deals</label>
    <type>Checkbox</type>
</CustomField>