force-app/main/default/objects/Tenant_Config__mdt/fields/Enable_Leads__c.field-meta.xml
<CustomField>
    <fullName>Enable_Leads__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates whether lead distribution functionality is enabled.</description>
    <label>Enable Leads</label>
    <type>Checkbox</type>
</CustomField>