force-app/main/default/objects/Tenant_Config__mdt/fields/Enable_MDF__c.field-meta.xml
<CustomField>
    <fullName>Enable_MDF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether MDF functionality is enabled.</description>
    <label>Enable MDF</label>
    <type>Checkbox</type>
</CustomField>