force-app/main/default/objects/Tenant_Config__mdt/fields/Enable_Webhooks__c.field-meta.xml
<CustomField>
    <fullName>Enable_Webhooks__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates whether outbound webhook dispatch to Webhook_Endpoint__mdt endpoints is enabled.</description>
    <label>Enable Webhooks</label>
    <type>Checkbox</type>
</CustomField>