force-app/main/default/objects/Tenant_Config__mdt/fields/Health_Deal_Win_Weight__c.field-meta.xml
<CustomField>
    <fullName>Health_Deal_Win_Weight__c</fullName>
    <description
  >Relative weight assigned to deal win rate in the partner health score.</description>
    <label>Health Deal Win Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>