force-app/main/default/objects/Tenant_Config__mdt/fields/Health_Lead_Acceptance_Weight__c.field-meta.xml
<CustomField>
    <fullName>Health_Lead_Acceptance_Weight__c</fullName>
    <description
  >Relative weight assigned to partner lead acceptance in the health score.</description>
    <label>Health Lead Acceptance Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>