force-app/main/default/objects/Tenant_Config__mdt/fields/Health_MDF_Weight__c.field-meta.xml
<CustomField>
    <fullName>Health_MDF_Weight__c</fullName>
    <description
  >Relative weight assigned to MDF utilisation in the partner health score.</description>
    <label>Health MDF Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>