force-app/main/default/objects/Tenant_Config__mdt/fields/Health_Revenue_Weight__c.field-meta.xml
<CustomField>
    <fullName>Health_Revenue_Weight__c</fullName>
    <description
  >Relative weight assigned to pipeline-to-revenue realisation in the partner health score.</description>
    <label>Health Revenue Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>