force-app/main/default/objects/Tenant_Config__mdt/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>The tenant's configured industry, used by
  MDF_Calculation_Rule__mdt to select industry-specific MDF eligibility
  rules. Optional - a tenant that hasn't set one only matches rules with a
  blank Industry__c (the universal fallback).</description>
    <label>Industry</label>
    <referenceTo>Industry__mdt</referenceTo>
    <relationshipLabel>Tenant Configs</relationshipLabel>
    <relationshipName>Tenant_Configs</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>