force-app/main/default/objects/Tenant_Config__mdt/fields/Lead_SLA_Hours__c.field-meta.xml
<CustomField>
    <fullName>Lead_SLA_Hours__c</fullName>
    <description
  >Default number of hours before an assigned lead breaches SLA.</description>
    <label>Lead SLA Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>