force-app/main/default/objects/Tenant_Config__mdt/fields/Max_Open_Deals_Per_Partner__c.field-meta.xml
<CustomField>
    <fullName>Max_Open_Deals_Per_Partner__c</fullName>
    <description
  >Max number of open (Submitted/Under Review/Approved) deal registrations a single partner account may have at once. Blank means unlimited.</description>
    <label>Max Open Deals Per Partner</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>