force-app/main/default/objects/Tenant_Config__mdt/fields/Setting_Name__c.field-meta.xml
<CustomField>
    <fullName>Setting_Name__c</fullName>
    <description>Setting Name</description>
    <label>Setting Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>